--- a/package.json
+++ b/package.json
@@ -20,11 +20,25 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/language": "^6.5.0",
+    "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
+    "axios": "^1.7.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "express-basic-auth": "^1.2.1",
+    "helmet": "^7.1.0",
+    "joi": "^17.13.3",
+    "moviedb-promise": "^4.0.7",
+    "natural": "^8.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sentiment": "^5.0.2",
+    "twitter-api-v2": "^1.17.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -32,6 +46,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/natural": "^5.1.5",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
