--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/jest": "^29.5.2",
     "@types/natural": "^5.1.5",
     "@types/node": "^20.3.1",
+    "@types/sentiment": "^5.0.4",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
